<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome.FirstActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/cv_bottom" />

        <RelativeLayout
            android:id="@+id/cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp">

            <LinearLayout
                android:id="@+id/ll_first_introPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/intro_first_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:lines="2"
                    android:text="@string/intro_first_2_text"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <LinearLayout
                        android:id="@+id/l1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginVertical="@dimen/_7sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_fill_circle" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/l1"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/first_skip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:text="Skip"
                            android:textSize="@dimen/_13sdp" />

                        <ImageView
                            android:id="@+id/img_first_next"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_intro_next" />

                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_introPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/intro_second_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:lines="2"
                    android:text="@string/intro_second_2_text"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <LinearLayout
                        android:id="@+id/l2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginVertical="@dimen/_7sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_fill_circle" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/l2"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/second_skip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:text="Skip"
                            android:textSize="@dimen/_13sdp" />

                        <ImageView
                            android:id="@+id/img_second_next"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_intro_next" />

                    </RelativeLayout>

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_third_introPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/intro_third_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:lines="2"
                    android:text="@string/intro_third_2_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <LinearLayout
                        android:id="@+id/l3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginVertical="@dimen/_7sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_blank_circle" />

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_fill_circle" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/l3"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/third_skip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:text="Skip"
                            android:textSize="@dimen/_13sdp" />

                        <ImageView
                            android:id="@+id/img_third_next"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_intro_next" />

                    </RelativeLayout>

                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>